changing about section title padding to fix white space

--- a/styles.css
+++ b/styles.css
@@ -79,8 +79,8 @@ body {
 }
 
 .grid_header {
-  width: 100%;
-  height: 100vh;
+  /* width: 100%;
+  height: 100vh; */
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -394,6 +394,11 @@ body {
 }
 
 @media only screen and (max-width: 475px) {
+  #header {
+    width: 100%;
+    height: 70vh;
+  }
+
   #about {
     padding-top: 25px;
   }
